--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -11,6 +11,10 @@ on:
         required: true
         type: string
 
+permissions:
+  contents: write
+  discussions: write
+
 env:
   CI: true
   FORCED_VERSION: ${{ inputs.forced_version || github.ref }}
@@ -36,7 +40,7 @@ jobs:
       - { name: Publish Publications To Maven Local, run: ./gradlew --no-configuration-cache publishToMavenLocal }
       - { name: Generate artifacts .tar.zstd, run: ./gradlew --no-configuration-cache generateArtifactsTarZstd }
       - name: Github Release
-        uses: softprops/action-gh-release@69320dbe05506a9a39fc8ae11030b214ec2d1f87
+        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # https://github.com/softprops/action-gh-release/releases/tag/v2.0.8
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
