--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -11,9 +11,9 @@ on:
         required: true
         type: string
 
-permissions:
-  contents: write
-  discussions: write
+#permissions:
+#  contents: write
+#  discussions: write
 
 env:
   CI: true
@@ -38,13 +38,6 @@ jobs:
 
       # To ensure we are fine before staging repository
       - { name: Publish Publications To Maven Local, run: ./gradlew --no-configuration-cache publishToMavenLocal }
-      - { name: Generate artifacts .tar.zstd, run: ./gradlew --no-configuration-cache generateArtifactsTarZstd }
-      - name: Github Release
-        uses: softprops/action-gh-release@c062e08bd532815e2082a85e87e3ef29c3e6d191 # https://github.com/softprops/action-gh-release/releases/tag/v2.0.8
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            build/korlibs-*.tar.zstd
       - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
       - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache publishAllPublicationsToMavenRepository" }
       - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
