--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -26,18 +26,35 @@ env:
   JAVA_DISTRIBUTION: zulu
 
 jobs:
-  publish:
-    runs-on: macos-latest
+  start:
+    runs-on: ubuntu-latest
+    outputs:
+      stagedRepositoryId: ${{ steps.releaseStep.outputs.stagedRepositoryId }}
     steps:
       - { name: Checkout, uses: actions/checkout@v3 }
-      - { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      - { name: Replace Gradle Wrapper, run: "sed 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties > gradle/wrapper/gradle-wrapper.properties.bak; cp gradle/wrapper/gradle-wrapper.properties.bak gradle/wrapper/gradle-wrapper.properties" }
-      - { name: Prepare Gradle, uses: gradle/gradle-build-action@ef76a971e2fa3f867b617efd72f2fbd72cf6f8bc } # v2.8.0
-      - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
-
-      # To ensure we are fine before staging repository
-      - { name: Publish Publications To Maven Local, run: ./gradlew --no-configuration-cache publishToMavenLocal }
-      - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
-      - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel --max-workers=32 publishAllPublicationsToMavenRepository" }
-      - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
+      - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
+      - {
+        id: releaseStep,
+        name: Start Maven Central Staging Repository,
+        run: ./gradlew --no-configuration-cache startReleasingMavenCentral
+      }
+  publish:
+    runs-on: macos-latest
+    needs: start
+    env:
+      stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }}
+    steps:
+      - { run: echo "$stagedRepositoryId" }
+      #- { name: Checkout, uses: actions/checkout@v3 }
+      #- { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
+      #- { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
+      #- { name: Replace Gradle Wrapper, run: "sed 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties > gradle/wrapper/gradle-wrapper.properties.bak; cp gradle/wrapper/gradle-wrapper.properties.bak gradle/wrapper/gradle-wrapper.properties" }
+      #- { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
+      #- { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
+#
+      ## To ensure we are fine before staging repository
+      #- { name: Publish Publications To Maven Local, run: ./gradlew --no-configuration-cache publishToMavenLocal }
+      #- { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
+      #- { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel --max-workers=32 publishAllPublicationsToMavenRepository" }
+      #- { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
