--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -34,27 +34,38 @@ jobs:
       - { name: Checkout, uses: actions/checkout@v3 }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
-      - {
-        id: releaseStep,
-        name: Start Maven Central Staging Repository,
-        run: ./gradlew --no-configuration-cache startReleasingMavenCentral
-      }
+      - { id: releaseStep, name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
+
   publish:
-    runs-on: macos-latest
-    needs: start
-    env:
-      stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }}
+    strategy:
+      fail-fast: true # Once working, comment this
+      matrix:
+        include:
+          - { os: ubuntu-latest, publishTask: "publishLinuxX64PublicationToMavenRepository publishLinuxArm64PublicationToMavenRepository" }
+          - { os: ubuntu-latest, publishTask: "publishMingwX64PublicationToMavenRepository" }
+          - { os: ubuntu-latest, publishTask: "publishAndroidDebugPublicationToMavenLocal publishAndroidReleasePublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository" }
+          - { os: ubuntu-latest, publishTask: "publishJsPublicationToMavenRepository publishWasmJsPublicationToMavenRepository" }
+          - { os: macos-latest, publishTask: "publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository" }
+          - { os: macos-latest, publishTask: "publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository publishTvosX64PublicationToMavenRepository" }
+          - { os: macos-latest, publishTask: "publishIosArm64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository publishIosX64Arm64PublicationToMavenRepository" }
+          - { os: macos-latest, publishTask: "publishWatchosArm64PublicationToMavenRepository publishWatchosArm32PublicationToMavenRepository publishWatchosDeviceArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository" }
+    timeout-minutes: 300
+    runs-on: ${{ matrix.os }}
+    needs: [start]
+    env: { stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }} }
     steps:
-      - { run: echo "$stagedRepositoryId" }
-      #- { name: Checkout, uses: actions/checkout@v3 }
-      #- { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
-      #- { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      #- { name: Replace Gradle Wrapper, run: "sed 's/-all/-bin/g' gradle/wrapper/gradle-wrapper.properties > gradle/wrapper/gradle-wrapper.properties.bak; cp gradle/wrapper/gradle-wrapper.properties.bak gradle/wrapper/gradle-wrapper.properties" }
-      #- { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
-      #- { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
-#
-      ## To ensure we are fine before staging repository
-      #- { name: Publish Publications To Maven Local, run: ./gradlew --no-configuration-cache publishToMavenLocal }
-      #- { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
-      #- { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel --max-workers=32 publishAllPublicationsToMavenRepository" }
-      #- { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
+      - { name: Print stagedRepositoryId=$stagedRepositoryId, run: "echo 'stagedRepositoryId: $stagedRepositoryId'" }
+      - { name: Checkout, uses: actions/checkout@v3 }
+      - { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
+      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
+      - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
+      - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
+      - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel $publishTask" }
+
+  finalize:
+    runs-on: ubuntu-latest
+    needs: [start, publish]
+    env: { stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }} }
+    steps:
+      - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
