--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -53,7 +53,7 @@ jobs:
     timeout-minutes: 300
     runs-on: ${{ matrix.os }}
     needs: [start]
-    env: { stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }} }
+    env: { stagedRepositoryId: "${{ needs.start.outputs.stagedRepositoryId }}" }
     steps:
       - { name: Print stagedRepositoryId=$stagedRepositoryId, run: "echo 'stagedRepositoryId: $stagedRepositoryId'" }
       - { name: Checkout, uses: actions/checkout@v3 }
@@ -66,6 +66,6 @@ jobs:
   finalize:
     runs-on: ubuntu-latest
     needs: [start, publish]
-    env: { stagedRepositoryId: ${{ needs.start.outputs.stagedRepositoryId }} }
+    env: { stagedRepositoryId: "${{ needs.start.outputs.stagedRepositoryId }}" }
     steps:
       - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
