--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -26,16 +26,6 @@ env:
   JAVA_DISTRIBUTION: zulu
 
 jobs:
-  start:
-    runs-on: ubuntu-latest
-    outputs:
-      stagedRepositoryId: ${{ steps.releaseStep.outputs.stagedRepositoryId }}
-    steps:
-      - { name: Checkout, uses: actions/checkout@v3 }
-      - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
-      - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
-      - { id: releaseStep, name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
-
   publish:
     strategy:
       fail-fast: true # Once working, comment this
@@ -52,8 +42,6 @@ jobs:
           - { os: macos-latest, publishTask: "publishWatchosArm64PublicationToMavenRepository publishWatchosArm32PublicationToMavenRepository publishWatchosDeviceArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository" }
     timeout-minutes: 300
     runs-on: ${{ matrix.os }}
-    needs: [start]
-    env: { stagedRepositoryId: "${{ needs.start.outputs.stagedRepositoryId }}" }
     steps:
       - { name: Print stagedRepositoryId=$stagedRepositoryId, run: "echo 'stagedRepositoryId: $stagedRepositoryId'" }
       - { name: Checkout, uses: actions/checkout@v3 }
@@ -61,11 +49,6 @@ jobs:
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
       - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
+      - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
       - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel $publishTask" }
-
-  finalize:
-    runs-on: ubuntu-latest
-    needs: [start, publish]
-    env: { stagedRepositoryId: "${{ needs.start.outputs.stagedRepositoryId }}" }
-    steps:
       - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
