--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -33,7 +33,7 @@ jobs:
         include:
           - { os: ubuntu-latest, publishTask: "publishLinuxX64PublicationToMavenRepository publishLinuxArm64PublicationToMavenRepository" }
           - { os: ubuntu-latest, publishTask: "publishMingwX64PublicationToMavenRepository" }
-          - { os: ubuntu-latest, publishTask: "publishAndroidDebugPublicationToMavenLocal publishAndroidReleasePublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishAndroidDebugPublicationToMavenRepository publishAndroidReleasePublicationToMavenRepository" }
           - { os: ubuntu-latest, publishTask: "publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository" }
           - { os: ubuntu-latest, publishTask: "publishJsPublicationToMavenRepository publishWasmJsPublicationToMavenRepository" }
           - { os: macos-latest, publishTask: "publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository" }
@@ -49,6 +49,7 @@ jobs:
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
       - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
+      #- { name: Publish Publications To Maven Local, run: "./gradlew --no-configuration-cache --parallel ${{ matrix.publishTask }}" }
       - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
       - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel ${{ matrix.publishTask }}" }
       - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
