--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -31,25 +31,32 @@ jobs:
       fail-fast: true # Once working, comment this
       matrix:
         include:
-          - { os: ubuntu-latest, publishTask: "publishLinuxX64PublicationToMavenRepository publishLinuxArm64PublicationToMavenRepository" }
-          - { os: ubuntu-latest, publishTask: "publishMingwX64PublicationToMavenRepository" }
-          - { os: ubuntu-latest, publishTask: "publishAndroidDebugPublicationToMavenRepository publishAndroidReleasePublicationToMavenRepository" }
-          - { os: ubuntu-latest, publishTask: "publishKotlinMultiplatformPublicationToMavenRepository publishJvmPublicationToMavenRepository" }
-          - { os: ubuntu-latest, publishTask: "publishJsPublicationToMavenRepository publishWasmJsPublicationToMavenRepository" }
-          - { os: macos-latest, publishTask: "publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository" }
-          - { os: macos-latest, publishTask: "publishTvosArm64PublicationToMavenRepository publishTvosSimulatorArm64PublicationToMavenRepository publishTvosX64PublicationToMavenRepository" }
-          - { os: macos-latest, publishTask: "publishIosArm64PublicationToMavenRepository publishIosSimulatorArm64PublicationToMavenRepository publishIosX64Arm64PublicationToMavenRepository" }
-          - { os: macos-latest, publishTask: "publishWatchosArm64PublicationToMavenRepository publishWatchosArm32PublicationToMavenRepository publishWatchosDeviceArm64PublicationToMavenRepository publishWatchosSimulatorArm64PublicationToMavenRepository" }
+          - { os: ubuntu-latest, publishTask: "publishLinuxX64PublicationToMavenLocal publishLinuxArm64PublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishMingwX64PublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishAndroidDebugPublicationToMavenLocal publishAndroidReleasePublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishKotlinMultiplatformPublicationToMavenLocal publishJvmPublicationToMavenLocal" }
+          - { os: ubuntu-latest, publishTask: "publishJsPublicationToMavenLocal publishWasmJsPublicationToMavenLocal" }
+          - { os: macos-latest, publishTask: "publishMacosX64PublicationToMavenLocal publishMacosArm64PublicationToMavenLocal" }
+          - { os: macos-latest, publishTask: "publishTvosArm64PublicationToMavenLocal publishTvosSimulatorArm64PublicationToMavenLocal publishTvosX64PublicationToMavenLocal" }
+          - { os: macos-latest, publishTask: "publishIosArm64PublicationToMavenLocal publishIosSimulatorArm64PublicationToMavenLocal publishIosX64Arm64PublicationToMavenLocal" }
+          - { os: macos-latest, publishTask: "publishWatchosArm64PublicationToMavenLocal publishWatchosArm32PublicationToMavenLocal publishWatchosDeviceArm64PublicationToMavenLocal publishWatchosSimulatorArm64PublicationToMavenLocal" }
     timeout-minutes: 300
     runs-on: ${{ matrix.os }}
     steps:
+      - name: Replace MavenLocal with MavenLocal
+        id: replace
+        run: |
+          publishTaskLocal=$(echo "${{ matrix.publishTask }}")
+          publishTaskRepository=$(echo "${{ matrix.publishTask }}" | sed 's/MavenLocal/MavenRepository/')
+          echo "publishTaskLocal=${publishTaskLocal}" >> $GITHUB_ENV
+          echo "publishTaskRepository=${publishTaskRepository}" >> $GITHUB_ENV
       - { name: Print stagedRepositoryId=$stagedRepositoryId, run: "echo 'stagedRepositoryId: $stagedRepositoryId'" }
       - { name: Checkout, uses: actions/checkout@v3 }
       - { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
       - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
       - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
       - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
-      #- { name: Publish Publications To Maven Local, run: "./gradlew --no-configuration-cache --parallel ${{ matrix.publishTask }}" }
+      - { name: Publish Publications To Maven Local, run: "./gradlew --no-configuration-cache --parallel ${{ env.publishTaskLocal }}" }
       - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
-      - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel ${{ matrix.publishTask }}" }
+      - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel ${{ env.publishTaskRepository }}" }
       - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
