--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -58,6 +58,6 @@ jobs:
       - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
       - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
       - { name: Publish Publications To Maven Local, run: "./gradlew --no-configuration-cache --parallel ${{ env.publishTaskLocal }}" }
-      #- { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
-      #- { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel ${{ env.publishTaskRepository }}" }
-      #- { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
+      - { name: Start Maven Central Staging Repository, run: ./gradlew --no-configuration-cache startReleasingMavenCentral }
+      - { name: Publish Publications To Maven Repository, run: "./gradlew --no-configuration-cache --parallel ${{ env.publishTaskRepository }}" }
+      - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
