--- a/.github/workflows/DEPLOY.yml
+++ b/.github/workflows/DEPLOY.yml
@@ -80,4 +80,9 @@ jobs:
   ##  needs: [start, publish]
   ##  env: { stagedRepositoryId: "${{ needs.start.outputs.stagedRepositoryId }}" }
   ##  steps:
+  ##    - { name: Checkout, uses: actions/checkout@v3 }
+  ##    - { name: Use Node.js 20.x, uses: actions/setup-node@v3, with: { node-version: 20.x } }
+  ##    - { name: Set up JDK, uses: actions/setup-java@v3, with: { distribution: "${{ env.JAVA_DISTRIBUTION }}", java-version: "${{ env.JAVA_VERSION }}" } }
+  ##    - { name: Prepare Gradle, uses: gradle/actions/setup-gradle@d9c87d481d55275bb5441eef3fe0e46805f9ef70 } # https://github.com/gradle/actions/releases/tag/v3.5.0
+  ##    - { name: Initialize Gradle, run: ./gradlew --no-configuration-cache }
   ##    - { name: Release to Maven Central, run: ./gradlew --no-configuration-cache releaseMavenCentral }
